crates/bayou_frontend/src/lexer/snapshots/bayou_frontend__lexer__tests__integer.snap
---
source: crates/bayou_frontend/src/lexer/tests.rs
info: "100"
---
- - kind:
      Integer: 100
    span:
      start: 0
      end: 3
- []

