crates/bayou_frontend/src/lexer/snapshots/bayou_frontend__lexer__tests__integer_overflow.snap
---
source: crates/bayou_frontend/src/lexer/tests.rs
info: "100000000000000000000"
---
- []
- - kind: IntegerOverflow
    span:
      start: 0
      end: 21

